<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="lang_code">en</string>

    <string name="title_app">Timetable</string>
    <string name="title_clock">Clock</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_clock">Clock</string>
    <string name="title_settings_application">Application</string>
    <string name="title_settings_timetable">Timetable</string>
    <string name="title_settings_widgets">Widgets</string>
    <string name="title_settings_about">About the app</string>
    <string name="title_widget_lesson">Lesson</string>
    <string name="title_widget_clock">Clock</string>
    <string name="title_widget_timetable">Timetable</string>
    <string name="title_notification_background">Background activity</string>

    <string name="description_clock_open">Rotate the device to open the clock</string>
    <string name="description_clock_close">Rotate the device to close the clock</string>
    <string name="description_notification_background">Application is running in the background to automatically update widgets</string>

    <string name="message_error">Error</string>
    <string name="message_success">Success</string>
    <string name="message_applied">Applied</string>
    <string name="message_apply">Apply</string>

    <string name="clock_mode">Clock mode</string>
    <string name="clock_mode_clock">Clock</string>
    <string name="clock_mode_timer">Timer</string>
    <string name="display_on_lockscreen">Display on the lock screen</string>
    <string name="display_headers">Display headers</string>
    <string name="display_date">Display date</string>
    <string name="display_date_time">Display date and time</string>
    <string name="display_current_lesson">Display title of the current lesson</string>
    <string name="display_next_lesson">Display title of the next lesson</string>
    <string name="not_display_next_time">Do not display time until the next lesson</string>

    <string name="timer_time">Time</string>
    <string name="timer_ago">ago</string>
    <string name="timer_earlier">Earlier</string>
    <string name="timer_now">Now</string>
    <string name="timer_then">Then</string>
    <string name="timer_ended">Ended</string>
    <string name="timer_ends_in">Ends in</string>
    <string name="timer_starts_in">Starts in</string>
    <string name="timer_hour_single">hour</string>
    <string name="timer_hour_small">hours</string>
    <string name="timer_hour_large">hours</string>
    <string name="timer_minute_single">minute</string>
    <string name="timer_minute_small">minutes</string>
    <string name="timer_minute_large">minutes</string>
    <string name="timer_second_single">second</string>
    <string name="timer_second_small">seconds</string>
    <string name="timer_second_large">seconds</string>

    <string name="day_yesterday">Yesterday</string>
    <string name="day_today">Today</string>
    <string name="day_tomorrow">Tomorrow</string>
    <string name="week_every">Every week</string>
    <string name="week_even">Even week</string>
    <string name="week_odd">Odd week</string>

    <string name="info_title">Title</string>
    <string name="info_titles">Titles</string>
    <string name="info_teacher">Teacher</string>
    <string name="info_teachers">Teachers</string>
    <string name="info_classroom">Classroom</string>
    <string name="info_classrooms">Classrooms</string>

    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="language">Language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>

    <string name="initial_index">Number of the first lesson</string>
    <string name="initial_index_zero">0</string>
    <string name="initial_index_one">1</string>
    <string name="timetable_json">Timetable (JSON)</string>

    <string name="combine_background">Combine widget background</string>
    <string name="update_on_unlock">Update widget when screen is unlocked</string>
    <string name="update_by_timetable">Update widget when lesson changes</string>
    <string name="update_by_timer">Update widget on a timer</string>
    <string name="modifiers">Modifiers</string>
    <string name="modifier_hours">Hours</string>
    <string name="modifier_minutes">Minutes</string>
    <string name="modifier_seconds">Seconds</string>
    <string name="modifier_round">Round</string>
    <string name="modifier_set">Set</string>

    <string name="source_code">Source code</string>
    <string name="timetable_editor">Timetable editor</string>
    <string name="app_version">Application version: %s</string>

    <string-array name="weekdays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>